--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.minedash.default_background": "Default Background",
+  "block.minedash.small_spike": "Small Spike",
   "block.minedash.spike": "Spike",
   "block.minedash.square": "Square",
   "block.minedash.square_1": "Square 1",
