--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -5,5 +5,10 @@
   "block.minedash.square": "Square",
   "block.minedash.square_1": "Square 1",
   "block.minedash.square_f": "Square F",
-  "itemGroup.minedash.main": "MineDash"
+  "category.minedash.main": "MineDash",
+  "entity.minedash.game_play": "Game Play",
+  "itemGroup.minedash.main": "MineDash",
+  "key.minedash.jump": "Jump",
+  "key.minedash.left": "Left",
+  "key.minedash.right": "Right"
 }
