spawn egg and delete tool

--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -7,6 +7,8 @@
   "block.minedash.square_f": "Square F",
   "category.minedash.main": "MineDash",
   "entity.minedash.game_play": "Game Play",
+  "item.minedash.delete_stick": "Delete Stick",
+  "item.minedash.game_play_spawn_egg": "Game Play",
   "itemGroup.minedash.main": "MineDash",
   "key.minedash.jump": "Jump",
   "key.minedash.left": "Left",
