--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -1,15 +1,26 @@
 {
+  "block.minedash.ball_portal": "Ball Portal",
   "block.minedash.big_jump_ring": "Big Jump Ring",
+  "block.minedash.cube_portal": "Cube Portal",
   "block.minedash.default_background": "Default Background",
+  "block.minedash.drop_ring": "Drop Ring",
   "block.minedash.gravity_jump_ring": "Gravity Jump Ring",
   "block.minedash.gravity_ring": "Gravity Ring",
   "block.minedash.jump_ring": "Jump Ring",
+  "block.minedash.robot_portal": "Robot Portal",
+  "block.minedash.ship_portal": "Ship Portal",
   "block.minedash.small_jump_ring": "Small Jump Ring",
   "block.minedash.small_spike": "Small Spike",
+  "block.minedash.spider_portal": "Spider Portal",
+  "block.minedash.spider_ring_down": "Spider Ring",
+  "block.minedash.spider_ring_up": "Spider Ring",
   "block.minedash.spike": "Spike",
   "block.minedash.square": "Square",
   "block.minedash.square_1": "Square 1",
   "block.minedash.square_f": "Square F",
+  "block.minedash.swing_portal": "Swing Portal",
+  "block.minedash.ufo_portal": "UFO Portal",
+  "block.minedash.wave_portal": "Wave Portal",
   "category.minedash.general": "General",
   "category.minedash.main": "MineDash",
   "config.minedash.general.hitboxDisplayRange": "Hitbox Display Range (Chunks)",
