--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -15,6 +15,7 @@
   "block.minedash.spider_ring_down": "Spider Ring",
   "block.minedash.spider_ring_up": "Spider Ring",
   "block.minedash.spike": "Spike",
+  "block.minedash.spike.tooltip": "§eWARNING: DO NOT play ▲▲▲ due to obtuse control.",
   "block.minedash.square": "Square",
   "block.minedash.square_1": "Square 1",
   "block.minedash.square_f": "Square F",
