--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -1,16 +1,21 @@
 {
   "block.minedash.ball_portal": "(WIP) Ball Portal",
+  "block.minedash.big_jump_pad": "Big Jump Pad",
   "block.minedash.big_jump_ring": "Big Jump Ring",
   "block.minedash.cube_portal": "Cube Portal",
   "block.minedash.default_background": "Default Background",
   "block.minedash.drop_ring": "Drop Ring",
   "block.minedash.gravity_jump_ring": "Gravity Jump Ring",
+  "block.minedash.gravity_pad": "Gravity Pad",
   "block.minedash.gravity_ring": "Gravity Ring",
+  "block.minedash.jump_pad": "Jump Pad",
   "block.minedash.jump_ring": "Jump Ring",
   "block.minedash.robot_portal": "(WIP) Robot Portal",
   "block.minedash.ship_portal": "(WIP) Ship Portal",
+  "block.minedash.small_jump_pad": "Small Jump Pad",
   "block.minedash.small_jump_ring": "Small Jump Ring",
   "block.minedash.small_spike": "Small Spike",
+  "block.minedash.spider_pad": "Spider Pad",
   "block.minedash.spider_portal": "(WIP) Spider Portal",
   "block.minedash.spider_ring_down": "Spider Ring",
   "block.minedash.spider_ring_up": "Spider Ring",
