--- a/src/main/resources/assets/minedash/lang/en_us.json
+++ b/src/main/resources/assets/minedash/lang/en_us.json
@@ -33,6 +33,17 @@
   "config.minedash.general.showHitboxes": "Show Hitboxes",
   "entity.minedash.game_play": "Game Play",
   "item.minedash.delete_stick": "Delete Stick",
+  "item.minedash.difficulty_easy": "Easy Difficulty Face",
+  "item.minedash.difficulty_easy_demon": "Easy Demon Difficulty Face",
+  "item.minedash.difficulty_extreme_demon": "Extreme Demon Difficulty Face",
+  "item.minedash.difficulty_hard": "Hard Difficulty Face",
+  "item.minedash.difficulty_hard_demon": "Hard Demon Difficulty Face",
+  "item.minedash.difficulty_harder": "Harder Difficulty Face",
+  "item.minedash.difficulty_insane": "Insane Difficulty Face",
+  "item.minedash.difficulty_insane_demon": "Insane Demon Difficulty Face",
+  "item.minedash.difficulty_medium_demon": "Medium Demon Difficulty Face",
+  "item.minedash.difficulty_na": "NA Difficulty Face",
+  "item.minedash.difficulty_normal": "Normal Difficulty Face",
   "item.minedash.game_play_spawn_egg": "Game Play",
   "itemGroup.minedash.main": "MineDash",
   "key.minedash.jump": "Jump",
